v 1.4.2 - add mounted capes + fairy ring highlights